# coaching_transcript_tool

./: .backup-timestamp  .clineignore  .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  .replit  .tool-versions  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.api  MANUAL_TESTING_GUIDE.md  MERGE_CHECKLIST.md  Makefile  README.md  REFACTOR_COMPLETION_CHECKLIST.md  STORAGE_SIMPLIFICATION_CHANGES.md  TESTING_SUMMARY.md  WORKTREE_NOTES.md  alembic.ini  app.py  debug_actual_parameters.py  debug_checkmacvalue.py  debug_checkmacvalue_validation.py  debug_frontend_backend_comparison.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.sample  fix_remaining_branches.sh  fix_security_branches.sh  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  refactor-plan.md  requirements-dev.txt  (+12 more)
.claude/: settings.local.json
.claude/agents/: database-query-analyzer.md  git-worktree-feature-manager.md  post-commit-updater.md  web-research-agent.md
.clinerules/: claude.md  default-rules.md  progress-changelog-rules.md
.githooks/: pre-commit
.github/workflows/: ci-cd.yml  ci.yml  release.yml  terraform.yml  test-dependency-injection.yml
.turbo/daemon/: 52c9035170368c34-turbo.log.2025-08-01
alembic/: env.py
alembic/versions/: 01dcbada3129_add_transcript_deletion_tracking_to_.py  022955bb0b58_add_usage_tracking_fields_to_users.py  04a3991223d9_add_student_and_coaching_school_plans.py  0643b3b3d7b7_refactor_database_column_names_for_.py  2484c9c03ec5_add_ecpay_subscription_models.py  2961da1deaa6_add_segment_level_role_assignments.py  35b2db1982ba_add_webhook_logging_and_monitoring_.py  3c453ba97936_add_user_role_and_role_audit_log_table.py  3d7a3c607c3f_add_usage_history_table_for_analytics.py  49515d3a1515_add_stt_provider_tracking_fields.py  4aa609eabb0b_add_client_status_field.py  5572c099bcd1_repair_user_plan_enum_phase2_migrate_.py  5ba2c5fa0295_add_usage_tracking_tables.py  6d160a319b2c_repair_user_plan_enum_phase1_add_values.py  6fedb09a97cd_add_client_fields_remove_session_source.py  77c28b494ee2_add_user_preferences_field.py  7fcc4672cd15_update_db_schema.py  87f04209b63f_add_ecpay_subscription_tables.py  888cb25741df_add_coach_profile_fields.py  900f713316c0_fix_enum_metadata_compatibility.py  94bae958c238_add_password_support_for_users.py  9f0839aaf2bd_add_enhanced_webhook_processing_fields.py  add_session_source_to_coaching_session.py  b2223a9da505_add_processing_status_table.py  ba3d559ed6c3_initial_migration_with_user_session_and_.py  d291c8ef7fa0_increase_merchant_member_id_length_to_50.py  dc0e4ea7ee0a_fix_plan_configuration_enum_constraint.py  (+4 more)
app/: __init__.py
app/api/: api_service.py
apps/cli/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--transcript-converter-Google-SSO-vtt-srt--1753700224954_1753700224955.txt  Pasted-Build-a-public-facing-SaaS-web-application-landing-page-and-dashboard-for-a-product-called-CoachAs-1753752202352_1753752202352.txt  Pasted-CoachAssistant-System-Architecture-This-document-outlines-the-hybrid-architecture-used-to-build-Coa-1753707737229_1753707737231.txt  Pasted-INFO-172-31-87-66-35830-POST-api-convert-transcript-HTTP-1-1-200-OK-ERROR-Exception-in-1753709038557_1753709038558.txt
backend/: Dockerfile.api  Dockerfile.cli  main.py
docs/: MANUAL_TEST_RESULTS.md  RELEASE_NOTES_AUGUST_2025.md  TECHNICAL_DEBT.md  TEST_REORGANIZATION_SUMMARY.md  architect.md  architecture-decisions.md  changelog.md  dashboard-features.md  database-erd.md  design-system.md  project-snapshot.md  project-status.md  refactor-new-claude-structure.md  refactor-plan.md  roadmap.md  test_checklist.md  todo.md  version-management.md
examples/: transcript_smoothing_usage.py
frontend/: Dockerfile  package.json  tailwind.config.ts
gateway/: main.py  requirements.txt  wrangler.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
packages_core_logic_docs/: environment-validation.md
packages_core_logic_scripts/: test_stt_language_model_support.py  test_us_central1_zh_tw.py
poc-assemblyAI/: assemblyai_analysis.md  chinese_text_processor.py  poc_assemblyai.py  poc_assemblyai_integration.py  provider_switcher_design.py  test_assemblyai_with_real_data.py  test_m4a_support.py
requirements/: api.txt
scripts/: README.md  add_missing_enum_values.py  admin_report_setup.py  beta_monitoring.py  bump-version.py  check-config  check-security.sh  check_architecture.py  check_dependency_injection.py  check_enum_data_consistency.py  check_production_migration_status.py  check_users.py  claude_subagent_db_query.py  debug_plans.py  emergency_enum_fix_production.py  emergency_session_reset.py  emergency_session_reset_production.py  ensure_student_plan.py  fix_production_migration_version.py  fix_user_plan.py  fix_user_plan_case.py  generate_test_token.py  reset_usage_for_testing.py  setup_howie_subscription.py  setup_test_auth.py  setup_test_subscription.py  sync-version.py  test-clean-architecture-migration.sh  test_api_endpoints.py  test_status_tracking.py  test_transcription_flow.py  verify_cloudflare_permissions.sh  vtt-convert
src/: main.py  parser.py  vtt.py
templates/: base.html  coming_soon.html  dashboard.html  index.html  login.html  transcript_converter.html
terraform/: DEPLOYMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  EXAMPLES.md  README.md
tests/: AUTHENTICATION_SETUP.md  README.md  README_ECPAY_COMPREHENSIVE_TESTING.md  README_ECPAY_TESTS.md  README_MAKE_TEST_ORGANIZATION.md  README_SCRIPT_ORGANIZATION.md  TESTING_IMPLEMENTATION_SUMMARY.md  conftest.py  conftest_ecpay.py  run_authenticated_payment_tests.sh  run_ecpay_tests.py  run_payment_qa_tests.py  run_receipt_tests.py  run_tests.py  run_working_payment_tests.py  test_assemblyai_provider.py  test_database_models.py  test_processor.py  test_speaker_analysis.py  test_stt_provider.py  test_stt_provider.py.bak  test_transcription_tasks.py  test_vtt.py  test_vtt_format2.py  test_vtt_integration.py  test_webhook_processing.py
(+991 files in other folders)
