[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coaching_transcript_tool"
version = "0.1.0"
authors = [
  { name="Howie Yu", email="howie.yu@gmail.com" },
]
description = "A tool for coaching transcripts"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.9",
    "pytest>=7.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart",
    "typer[all]",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
]


[project.urls]
"Homepage" = "https://github.com/howie/coaching_transcript_tool"
"Bug Tracker" = "https://github.com/howie/coaching_transcript_tool/issues"

[project.scripts]
transcript-tool = "coaching_assistant.cli:app"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]