[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coaching_transcript_tool"
version = "2.3.0"
authors = [
  { name="Howie Yu", email="howie.yu@gmail.com" },
]
description = "A tool for coaching transcripts"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "coaching-assistant-core",
    "pytest>=7.0.0",
    "typer[all]",
]


[project.urls]
"Homepage" = "https://github.com/howie/coaching_transcript_tool"
"Bug Tracker" = "https://github.com/howie/coaching_transcript_tool/issues"

[project.scripts]
transcript-tool = "coaching_assistant.cli:app"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
